styles/fix restaurant name text alignement

--- a/css/styles.css
+++ b/css/styles.css
@@ -325,7 +325,7 @@ nav h1 a {
   font-size: 20pt;
   font-weight: 200;
   letter-spacing: 0;
-  margin: 15px 0 30px;
+  margin: 40px 0 30px;
   text-transform: uppercase;
 }
 #restaurant-img {
